--- a/adm/style/acp_cogauth_body.html
+++ b/adm/style/acp_cogauth_body.html
@@ -7,9 +7,9 @@
 	<fieldset>
 		<legend>{L_SETTINGS}</legend>
 		<dl>
-			<dt><label for="cogauth_goodbye">{L_ACP_COGAUTH_GOODBYE}{L_COLON}</label></dt>
-			<dd><label><input type="radio" class="radio" name="cogauth_goodbye" value="1" <!-- IF COGAUTH_GOODBYE -->checked="checked"<!-- ENDIF -->/> {L_YES}</label>
-				<label><input type="radio" class="radio" name="cogauth_goodbye" value="0" <!-- IF not COGAUTH_GOODBYE -->checked="checked"<!-- ENDIF --> /> {L_NO}</label></dd>
+			<dt><label for="cogauth_enabled">{L_ACP_COGAUTH_GOODBYE}{L_COLON}</label></dt>
+			<dd><label><input type="radio" class="radio" name="cogauth_enabled" value="1" <!-- IF COGAUTH_ENABLED -->checked="checked"<!-- ENDIF -->/> {L_YES}</label>
+				<label><input type="radio" class="radio" name="cogauth_enabled" value="0" <!-- IF not COGAUTH_ENABLED -->checked="checked"<!-- ENDIF --> /> {L_NO}</label></dd>
 		</dl>
 	</fieldset>
 
