Remove unused files and add config

--- a/adm/style/auth_provider_cogauth.html
+++ b/adm/style/auth_provider_cogauth.html
@@ -1,7 +1,7 @@
 <fieldset id="cogauth_user_pool_settings">
-	<legend>Hello World</legend>
+	<legend>{L_COGAUTH_SETTINGS}</legend>
 	<dl>
-		<dt><label for="cogauth_user_pool">{COGAUTH_POOL}{L_COLON}</label><br /><span>{COGAUTH_POOL_EXPLAIN}</span></dt>
-		<dd><input type="text" id="cogauth_user_pool" size="40" name="config[cogauth_user_pool]" value="{COGAUTH_POOL_ID}" /></dd>
+		<dt><label for="cogauth_user_pool">{L_COGAUTH_POOL}{L_COLON}</label><br /><span>{COGAUTH_POOL_EXPLAIN}</span></dt>
+		<dd><input type="text" id="cogauth_user_pool" size="40" name="config[cogauth_pool_id]" value="{COGAUTH_POOL_ID}" /></dd>
 	</dl>
-</fieldset>{
+</fieldset>
