--- a/adm/style/cogauth_body.html
+++ b/adm/style/cogauth_body.html
@@ -4,10 +4,9 @@
 
 <form id="acp_board" method="post" action="{U_ACTION}">
 	<fieldset>
-
 		<dl>
 			<dt>
-				<label for="cogauth_secret_key">{APC_COGAUTH_SECRET_KEY}{L_COLON}</label>
+				<label for="cogauth_secret_key">{L_ACP_COGAUTH_SECRET_KEY}{L_COLON}</label>
 			</dt>
 			<dd>
 				<input type="text" id="cogauth_secret_key" name="cogauth_secret_key" value="{COGAUTH_SECRET_KEY}"/>
