Fix Auth param display

--- a/adm/style/auth_provider_cogauth.html
+++ b/adm/style/auth_provider_cogauth.html
@@ -1,4 +1,4 @@
-<fieldset id="cogauth_user_pool_settings">
+<fieldset id="auth_cogauth_settings">
 	<legend>{L_COGAUTH_SETTINGS}</legend>
 	<dl>
 		<dt><label for="cogauth_aws_region">{L_COGAUTH_AWS_REGION}{L_COLON}</label><br /><span>{COGAUTH_AWS_REGION_EXPLAIN}</span></dt>
