--- a/adm/style/cogauth_body.html
+++ b/adm/style/cogauth_body.html
@@ -6,10 +6,10 @@
 	<fieldset>
 		<dl>
 			<dt>
-				<label for="cogauth_token_refresh_gc">{L_ACP_COGAUTH_TOKEN_REFRESH}{L_COLON}</label>
+				<label for="cogauth_token_cleanup_gc">{L_ACP_COGAUTH_TOKEN_CLEANUP}{L_COLON}</label>
 			</dt>
 			<dd>
-				<input type="text" id="cogauth_token_refresh_gc" name="cogauth_token_refresh_gc" value="{COGAUTH_TOKEN_REFRESH}"/>
+				<input type="text" id="cogauth_token_cleanup_gc" name="cogauth_token_cleanup_gc" value="{COGAUTH_TOKEN_CLEANUP}"/>
 			</dd>
 		</dl>
 
