Refresh token expire handling / tidy up

--- a/adm/style/cogauth_body.html
+++ b/adm/style/cogauth_body.html
@@ -12,6 +12,14 @@
 				<input type="text" id="cogauth_token_cleanup_gc" name="cogauth_token_cleanup_gc" value="{COGAUTH_TOKEN_CLEANUP}"/>
 			</dd>
 		</dl>
+		<dl>
+			<dt>
+				<label for="cogauth_max_session_hours">{L_ACP_COGAUTH_MAX_SESSION_HOURS}{L_COLON}</label>
+			</dt>
+			<dd>
+				<input type="text" id="cogauth_max_session_hours" name="cogauth_max_session_hours" value="{COGAUTH_MAX_SESSION_HOURS}"/>
+			</dd>
+		</dl>
 
 		<p class="submit-buttons">
 			<input class="button1" type="submit" id="submit" name="submit" value="{L_SUBMIT}" />&nbsp;
