--- a/adm/style/auth_provider_cogauth.html
+++ b/adm/style/auth_provider_cogauth.html
@@ -1,30 +1,16 @@
 <fieldset id="auth_cogauth_settings">
 	<legend>{L_COGAUTH_SETTINGS}</legend>
 	<dl>
-		<dt><label for="cogauth_aws_region">{L_COGAUTH_AWS_REGION}{L_COLON}</label><br /><span>{COGAUTH_AWS_REGION_EXPLAIN}</span></dt>
-		<dd><input type="text" id="cogauth_aws_region" size="40" name="config[cogauth_aws_region]" value="{COGAUTH_AWS_REGION}" /></dd>
-	</dl>
-
-	<dl>
-		<dt><label for="cogauth_aws_key">{L_COGAUTH_AWS_KEY}{L_COLON}</label><br /><span>{COGAUTH_AWS_KEY_EXPLAIN}</span></dt>
-		<dd><input type="text" id="cogauth_aws_key" size="40" name="config[cogauth_aws_key]" value="{COGAUTH_AWS_KEY}" /></dd>
-	</dl>
-	<dl>
-		<dt><label for="cogauth_aws_secret">{L_COGAUTH_AWS_SECRET}{L_COLON}</label><br /><span>{COGAUTH_AWS_SECRET_EXPLAIN}</span></dt>
-		<dd><input type="text" id="cogauth_aws_secret" size="40" name="config[cogauth_aws_secret]" value="{COGAUTH_AWS_SECRET}" /></dd>
-	</dl>
-
-	<dl>
-		<dt><label for="cogauth_pool_id">{L_COGAUTH_POOL_ID}{L_COLON}</label><br /><span>{COGAUTH_POOL_ID_EXPLAIN}</span></dt>
-		<dd><input type="text" id="cogauth_pool_id" size="40" name="config[cogauth_pool_id]" value="{COGAUTH_POOL_ID}" /></dd>
-	</dl>
-	<dl>
 		<dt><label for="cogauth_client_id">{L_COGAUTH_CLIENT_ID}{L_COLON}</label><br /><span>{COGAUTH_CLIENT_ID_EXPLAIN}</span></dt>
 		<dd><input type="text" id="cogauth_client_id" size="40" name="config[cogauth_client_id]" value="{COGAUTH_CLIENT_ID}" /></dd>
 	</dl>
 	<dl>
 		<dt><label for="cogauth_client_secret">{L_COGAUTH_CLIENT_SECRET}{L_COLON}</label><br /><span>{COGAUTH_CLIENT_SECRET_EXPLAIN}</span></dt>
 		<dd><input type="text" id="cogauth_client_secret" size="40" name="config[cogauth_client_secret]" value="{COGAUTH_CLIENT_SECRET}" /></dd>
+	</dl>
+	<dl>
+		<dt><label for="cogauth_refresh_token_expiration_days">{L_ACP_COGAUTH_REFRESH_TOKEN_EXP_DAYS}{L_COLON}</label></dt>
+		<dd><input type="text" id="cogauth_refresh_token_expiration_days" name="config[cogauth_refresh_token_expiration_days]" value="{COGAUTH_REFRESH_TOKEN_EXP_DAYS}"/></dd>
 	</dl>
 
 </fieldset>
