--- a/adm/style/cogauth_body.html
+++ b/adm/style/cogauth_body.html
@@ -5,20 +5,26 @@
 <form id="acp_board" method="post" action="{U_ACTION}">
 	<fieldset>
 		<dl>
-			<dt>
-				<label for="cogauth_token_cleanup_gc">{L_ACP_COGAUTH_TOKEN_CLEANUP}{L_COLON}</label>
-			</dt>
-			<dd>
-				<input type="text" id="cogauth_token_cleanup_gc" name="cogauth_token_cleanup_gc" value="{COGAUTH_TOKEN_CLEANUP}"/>
-			</dd>
+			<dt><label for="cogauth_aws_region">{L_COGAUTH_AWS_REGION}{L_COLON}</label><br /><span>{COGAUTH_AWS_REGION_EXPLAIN}</span></dt>
+			<dd><input type="text" id="cogauth_aws_region" size="40" name="config[cogauth_aws_region]" value="{COGAUTH_AWS_REGION}" /></dd>
+		</dl>
+
+		<dl>
+			<dt><label for="cogauth_aws_key">{L_COGAUTH_AWS_KEY}{L_COLON}</label><br /><span>{COGAUTH_AWS_KEY_EXPLAIN}</span></dt>
+			<dd><input type="text" id="cogauth_aws_key" size="40" name="config[cogauth_aws_key]" value="{COGAUTH_AWS_KEY}" /></dd>
 		</dl>
 		<dl>
-			<dt>
-				<label for="cogauth_max_session_hours">{L_ACP_COGAUTH_MAX_SESSION_HOURS}{L_COLON}</label>
-			</dt>
-			<dd>
-				<input type="text" id="cogauth_max_session_hours" name="cogauth_max_session_hours" value="{COGAUTH_MAX_SESSION_HOURS}"/>
-			</dd>
+			<dt><label for="cogauth_aws_secret">{L_COGAUTH_AWS_SECRET}{L_COLON}</label><br /><span>{COGAUTH_AWS_SECRET_EXPLAIN}</span></dt>
+			<dd><input type="text" id="cogauth_aws_secret" size="40" name="config[cogauth_aws_secret]" value="{COGAUTH_AWS_SECRET}" /></dd>
+		</dl>
+
+		<dl>
+			<dt><label for="cogauth_pool_id">{L_COGAUTH_POOL_ID}{L_COLON}</label><br /><span>{COGAUTH_POOL_ID_EXPLAIN}</span></dt>
+			<dd><input type="text" id="cogauth_pool_id" size="40" name="config[cogauth_pool_id]" value="{COGAUTH_POOL_ID}" /></dd>
+		</dl>
+		<dl>
+			<dt><label for="cogauth_token_cleanup_gc">{L_ACP_COGAUTH_TOKEN_CLEANUP}{L_COLON}</label></dt>
+			<dd><input type="text" id="cogauth_token_cleanup_gc" name="cogauth_token_cleanup_gc" value="{COGAUTH_TOKEN_CLEANUP}"/></dd>
 		</dl>
 
 		<p class="submit-buttons">
