--- a/adm/style/auth_provider_cogauth.html
+++ b/adm/style/auth_provider_cogauth.html
@@ -1,12 +1,11 @@
 <fieldset id="auth_cogauth_settings">
 	<legend>{L_COGAUTH_SETTINGS}</legend>
 	<dl>
+		<dt><label>{L_COGAUTH_CLIENT_NAME}{L_COLON}</label></dt>
+		<dd><input type="text" value="{COGAUTH_CLIENT_NAME}"  readonly="readonly" ></dd>
+	</dl>
+	<dl>
 		<dt><label for="cogauth_client_id">{L_COGAUTH_CLIENT_ID}{L_COLON}</label><br /><span>{COGAUTH_CLIENT_ID_EXPLAIN}</span></dt>
 		<dd><input type="text" id="cogauth_client_id" size="40" name="config[cogauth_client_id]" value="{COGAUTH_CLIENT_ID}" /></dd>
 	</dl>
-	<dl>
-		<dt><label for="cogauth_client_secret">{L_COGAUTH_CLIENT_SECRET}{L_COLON}</label><br /><span>{COGAUTH_CLIENT_SECRET_EXPLAIN}</span></dt>
-		<dd><input type="text" id="cogauth_client_secret" size="40" name="config[cogauth_client_secret]" value="{COGAUTH_CLIENT_SECRET}" /></dd>
-	</dl>
-
 </fieldset>
