--- a/adm/style/cogauth_body.html
+++ b/adm/style/cogauth_body.html
@@ -92,6 +92,15 @@
 			<dd><input type="number" min="1" max="3650"  id="cogauth_refresh_token_expiration_days" name="cogauth_refresh_token_expiration_days"
 					   value="{COGAUTH_REFRESH_TOKEN_EXP_DAYS}"/> {L_DAYS}</dd>
 		</dl>
+		<dl>
+		<dt><label for="cogauth_hosted_ui">{L_APC_HOSTED_UI}{L_COLON}</label><br>
+			<span>{L_APC_HOSTED_UI_EXPLAIN}</span></dt>
+			<dd><label><input type="radio" id="cogauth_hosted_ui" name="cogauth_hosted_ui" value="1" {% if COGAUTH_HOSTED_UI %}checked="checked"{%endif%} class="radio"> {L_YES}</label>
+				<label><input type="radio"  name="cogauth_hosted_ui" value="0" {% if not COGAUTH_HOSTED_UI %}checked="checked"{%endif%} class="radio"> {L_NO}</label>
+			</dd>
+
+		</dl>
+
 		<p class="submit-buttons">
 			<input class="button" type="submit" id="use_app_client" name="use_app_client" value="{L_SUBMIT}" />&nbsp;
 		</p>
